<resources>
    <string name="app_name">Card Game</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Login">Login</string>
    <string name="hello">Hello</string>
    <string name="toBattle">出战</string>
    <string name="toBag">背包</string>
    <string name="toLibrary">图书馆</string>
    <string name="toMission">任务</string>
    <string name="userLvUp">用户升级</string>
    <string name="battleResult">战斗结果</string>
    <string name="buy_text">购买</string>
</resources>